[package]
name = "steam_randomiser"
version = "0.4.0"
authors = ["Dimitri Belopopsky <dimitri@belopopsky.com>"]
edition = "2021"
license = "MIT"
description = "Randomly picks an installed Steam game!"
readme = "README.md"
homepage = "https://github.com/ShadowMitia/steam_randomiser"
repository = "https://github.com/ShadowMitia/steam_randomiser"
keywords = ["cli", "steam", "random", "game"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
rand = "0.8.3"
which = "4.1.0"
clap = "3.0.0-beta.5"


[profile.release]
lto = true
codegen-units = 1