[package]
name = "steam_randomiser"
version = "0.5.0"
authors = ["Dimitri Belopopsky <dimitri@belopopsky.com>"]
edition = "2021"
license = "MIT"
description = "Randomly picks an installed Steam game!"
readme = "README.md"
homepage = "https://github.com/ShadowMitia/steam_randomiser"
repository = "https://github.com/ShadowMitia/steam_randomiser"
keywords = ["cli", "steam", "random", "game"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
rand = "0.8.5"
which = "5.0.0"
clap = { version = "4.4.7", features = ["derive"] }


[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
